<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/list"/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search"/>

    <item
            android:id="@+id/navigation_wish"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/wish"/>

    <item
        android:id="@+id/navigation_note_board"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/note_board"/>

    <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting"/>
</menu>