<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.midasgo.bookdoc.viewmodel.ReplyListViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/toolbar_reply_list_title"
            app:titleTextColor="@color/white" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_above="@+id/lyWrite"
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/row_reply">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/lyWrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_toLeftOf="@+id/btnWirte"
                android:id="@+id/textInputLayout0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMsg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_reply_write"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:onClick="@{(view) -> viewmodel.onClickUplaodReply(view)}"
                android:text="@string/registration"
                android:id="@+id/btnWirte"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
</layout>